	PR c++/21008, DR 515 	* semantics.c (finish_non_static_data_member): Don't check 	derivation in a template.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@154150 138bc75d-0d04-0410-961f-82ee72b054a4