gcc/testsuite/g++.dg/lookup/scoped8.C
@@ -14,3 +14,5 @@ template <int> struct B
 {
     int foo() { return A::i; }	// { dg-error "this location" }
 };
+
+template struct B<0>;
